--- a/main.css
+++ b/main.css
@@ -4,10 +4,12 @@
     --cafe-oscuro: #E5DDC5;
     --cafe-claro: #F1EEDC;
 
-    
-    --bs-navbar-bg: var(--cafe-oscuro); /* Define el color de fondo */
-       
-    
+}
+
+nav a[href="#"]{
+    background-color: rgba(245, 245, 245, 0.46);
+    border-radius: 2rem;
+    font-weight: bold
 }
 
 
